parliament with images

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack 5 starting kit</title>
+  <title>Club de Madrid: General Assembly</title>
   <base href="/">
 
 </head>
@@ -13,11 +13,17 @@
 <body>
 
   <section class=" assembly-container">
-    <h1 class="fontsize-18 fontweight-700">webpack 5 starting kit.</h1>
-    <img src="./img/demo-img.jpg" alt="demo" width="42">
-    <p>Open a new console and click the body.</p>
+    <h1 class="fontsize-18 fontweight-700">Club de Madrid: General Assembly</h1>
+    <p>The General Assembly is the highest representative and governing body of Club de Madrid.</p>
+
+    <div class="modal-content" id="modal_content"></div>
+
+  </section>
+  <section class=" assembly-container">
+
     <small>Juantxo Cruz | 2022</small>
   </section>
+
 </body>
 
 </html>
